# cmd_timer

./: Cargo.toml  README.md  copy.sh
src/: cmd.rs  main.rs  parse.rs  timer.rs  ui.rs
