[package]
authors = ["LMJW <heysuperming@gmail.com>"]
edition = "2018"
name = "cmd_timer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "timer"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.19"
# use tokio because we are using the time feature comes with the iced
# remove if we implement time by ourselves
iced = {version = "0.3", features = ["tokio"]}
notify-rust = "4"
regex = "1"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
